# Webcam_Embedded_Project

./: .gitignore  CMakeLists.txt  README.md  RecordWebcam  azcli_upload_blob.sh  canny.cpp  curl.sh  main.cpp
DisplayImageTool/: DisplayImage
include/: canny.h
